Bug 415715 - Fails to build with Qt 5.9
Summary: Fails to build with Qt 5.9
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-30 20:55 UTC by Wolfgang Bauer
Modified: 2019-12-30 22:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2019-12-30 20:55:40 UTC
lattedock 0.9.6 fails to build with Qt 5.9, although 5.9.0 is specified as minimum version in CMakeLists.txt (and 0.9.5 built fine).

Compiler error:
/home/abuild/rpmbuild/BUILD/latte-dock-0.9.6/app/view/panelshadows.cpp: In member function 'void* PanelShadows::Private::createPixmap(const QPixmap&)':
/home/abuild/rpmbuild/BUILD/latte-dock-0.9.6/app/view/panelshadows.cpp:265:15: error: 'class QImage' has no member named 'sizeInBytes'
         image.sizeInBytes(), image.constBits());
               ^~~~~~~~~~~

QImage::sizeInBytes() was introduced in Qt 5.10 according to the documentation.
Comment 1 Michail Vourlakos 2019-12-30 21:57:35 UTC
Git commit 3108a73533a51b9818c2fb2fa7d62e6f241190ba by Michail Vourlakos.
Committed on 30/12/2019 at 21:57.
Pushed by mvourlakos into branch 'master'.

fixed compile with qt 5.9

FIXED-IN:0.9.7

M  +1    -1    app/view/panelshadows.cpp

https://commits.kde.org/latte-dock/3108a73533a51b9818c2fb2fa7d62e6f241190ba
Comment 2 Michail Vourlakos 2019-12-30 21:58:12 UTC
Git commit ca8aadf1a9ad721865537183bfed66bb7d9c2b6f by Michail Vourlakos.
Committed on 30/12/2019 at 21:58.
Pushed by mvourlakos into branch 'v0.9'.

fixed compile with qt 5.9

FIXED-IN:0.9.7

M  +1    -1    app/view/panelshadows.cpp

https://commits.kde.org/latte-dock/ca8aadf1a9ad721865537183bfed66bb7d9c2b6f
Comment 3 Michail Vourlakos 2019-12-30 21:59:06 UTC
(In reply to Wolfgang Bauer from comment #0)
> lattedock 0.9.6 fails to build with Qt 5.9, although 5.9.0 is specified as
> minimum version in CMakeLists.txt (and 0.9.5 built fine).
> 
> Compiler error:
> /home/abuild/rpmbuild/BUILD/latte-dock-0.9.6/app/view/panelshadows.cpp: In
> member function 'void* PanelShadows::Private::createPixmap(const QPixmap&)':
> /home/abuild/rpmbuild/BUILD/latte-dock-0.9.6/app/view/panelshadows.cpp:265:
> 15: error: 'class QImage' has no member named 'sizeInBytes'
>          image.sizeInBytes(), image.constBits());
>                ^~~~~~~~~~~
> 
> QImage::sizeInBytes() was introduced in Qt 5.10 according to the
> documentation.

can you please check that now compiles fine without any other issues?
Comment 4 Wolfgang Bauer 2019-12-30 22:48:10 UTC
(In reply to Michail Vourlakos from comment #3)
> can you please check that now compiles fine without any other issues?
Yes, it compiles fine now with Qt 5.9.4 and 5.9.7, also tested 5.12.6, 5.13.1, and 5.14.0.