fixed compile with qt 5.9

FIXED-IN:0.9.7
BUG:415715